--- a/.obsidian/snippets/obsidian.css
+++ b/.obsidian/snippets/obsidian.css
@@ -14,6 +14,7 @@ img {
   color: rgb(126,12,110);
   border-color: none;
   --callout-icon: none;
+  padding: 0px !important;
 }
 
 .callout[data-callout="question"] > .callout-title > .callout-title-inner {
